feat: add email notifications for completed reservations
- Introduced `ReservationCompletedEvent` to trigger actions upon reservation completion.
- Added Thymeleaf email templates for notifying guests (`reservation-completed-guest.html`) and hosts (`reservation-completed-host.html`).
- Implemented `handleReservationCompleted` in `ReservationEmailListener` to manage email notifications, including context population for guest reviews.
- Created `ReservationEmailListenerTest` for unit testing event handling and email generation logic.
- Enhanced user profile management in `UserController` with endpoints for viewing (`/me`) and updating profiles (`PATCH /me`).
- Refined event-driven behavior for reservation email processing and template usage.